# notification

./: .dockerignore  .env.schema  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  appp.py  config.py  docker-compose.yml  gitlab-ci.yml  gunicorn_config.py  gunicorn_starter.sh  internal_requirements.txt  namespace.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: build-and-publish.yml  ci.yml  run-tests.yml  trigger-jenkins.yml
app/: __init__.py  __main__.py  api_registry.py  config.py  main.py
app/dependencies/: db.py
app/models/: __init__.py  base_models.py  models_announcement.py  models_email.py  models_notification.py  models_unsub.py  sql_announcement.py  sql_notification.py
emails/auth/: reset_password.html  reset_username.html
emails/contact_us/: confirm_email.html  support_email.html
emails/copy_request/: complete_request.html  new_request.html
emails/invitation/: ad_existing_invite_project.html  ad_existing_invite_without_project.html  ad_invite_project.html  ad_invite_without_project.html  project.html  without_project.html
emails/resource_request/: approved.html  request.html
emails/role/: update.html
emails/test_account/: contract_user_create.html  review_notification.html  support_notification.html  (+1 more)
kubernetes/: deployment.yaml  dev-deployment.yaml  staging-deployment.yaml
migrations/: env.py
service_email/: __init__.py  ops_email.py
tests/: conftest.py  logger.py  pytest.ini  test_announcement.py  test_notification.py  test_ops_email.py  test_requirements.txt
(+23 files in other folders)
