[tool.poetry]
name = "service_notification"
version = "0.1.0"
description = "This service is designed to manage emails and system maintenance notifications"
authors = ["Indoc Research"]

[tool.poetry.dependencies]
python = "^3.7"
pilot-platform-common = "^0.0.25"
fastapi = "0.62.0"
fastapi-utils = "0.2.1"
gunicorn = "20.0.4"
httptools = "0.1.1"
Jinja2 = "2.11.2"
opentelemetry-exporter-jaeger = "1.6.2"
opentelemetry-instrumentation = "0.26b1"
opentelemetry-instrumentation-fastapi = "0.26b1"
opentelemetry-instrumentation-requests = "0.26b1"
psycopg2-binary = "2.9.3"
PyJWT = "1.4.2"
python-dotenv = "0.19.1"
python-json-logger = "0.1.11"
python-multipart = "0.0.5"
requests = "2.24.0"
uvicorn = "0.12.3"
uvloop = "0.14.0"
itsdangerous = "1.1.0"
markupsafe = "1.1.1"
asyncpg = "^0.25.0"
aiosmtpd = "^1.4.2"
pytest-asyncio = "^0.18.3"
async-asgi-testclient = "^1.4.10"
pytest-mock = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.4"
requests = "2.24.0"
pytest-cov = "^3.0.0"
pytest-env = "0.6.2"
testcontainers = "3.4.2"
sqlalchemy-utils = "0.38.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
